build test, seo title, meta, robots.txt

--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<link
+			rel="icon"
+			type="image/svg+xml"
+			href="/money.svg" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0" />
+		<title>테슬라 | 정보 모아보기</title>
+		<meta
+			name="description"
+			content="테슬라 최신 뉴스, 트위터(X) 주식정보를 받아보세요. 실시간 채팅으로 테슬라 주주들과 이야기해보세요/" />
+		<meta
+			name="keywords"
+			content="테슬라, 주식, tesla, x, 종목토론방, 종토방" />
+	</head>
+	<body>
+		<div id="root"></div>
+		<script
+			type="module"
+			src="/src/main.tsx"></script>
+	</body>
 </html>
